--- a/src/style.css
+++ b/src/style.css
@@ -20,3 +20,23 @@ p {
 #page-guide {
   font-size: 24px;
 }
+
+a {
+  color: brown;
+  text-decoration: none;
+}
+
+a:hover {
+  color: burlywood;
+}
+
+.active {
+  font-weight: bold;
+}
+
+img {
+  width: 500px;
+  display: block;
+  margin: 0 auto;
+  padding: 10px;
+}
